# bus_factor_app

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  README.tpl
.github/workflows/: ci.yml  release.yml
bus_factor/: Cargo.toml  README.tpl
bus_factor/src/: api.rs  calculator.rs  lib.rs
clients/: Cargo.toml
clients/github/: .openapi-generator-ignore  Cargo.toml  openapitools.json
clients/github/src/: builder.rs  lib.rs  limiter.rs  payload.rs
clients/src/: api.rs
src/: args.rs  lib.rs  main.rs
tests/: happy.rs
