[package]
name = "bus_factor_app"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "Program finding popular GitHub projects with a bus factor."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = ["bus_factor", "clients/github"]

[dependencies]
bus_factor = { path = "bus_factor" }
clap = { version = "3.1", features = ["derive"] }
env_logger = "0.9"
futures = "0.3"
github_client = { path = "clients/github" }
log = "0.4"
secrecy = "0.8"
tokio = { version = "1.18", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
chrono = "0.4"
rand = "0.8"
wiremock = "0.5"

[[bin]]
name = "bus_factor"
path = "src/main.rs"
