[package]
name = "bus_factor"
version = "0.0.2"
edition = "2021"
license = "MIT"

[dependencies]
derive_more = { version = "0.99", features = ["from"] }
futures = { version = "0.3", features = ["std"], optional = true }
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.18", features = [
    "macros",
    "rt-multi-thread",
    "sync",
], optional = true }
async-trait = "0.1"
anyhow = "1.0"

[features]
api = []
calculator = ["dep:futures", "dep:tokio"]
