[package]
name = "github_client"
version = "0.0.1"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clients = { path = "../../clients" }
paginate = "1.1"
reqwest = { version = "0.11", features = ["json"] }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tower = { version = "0.4", features = ["limit", "full"] }
tokio = { version = "1.18", features = ["sync"] }

[dev-dependencies]
tokio-test = "0.4"
