[package]
name = "bus_factor_github_client"
version = "0.0.3"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bus_factor = { path = "../../bus_factor", features = ["api"] }
chrono = "0.4"
derive_more = { version = "0.99", features = ["from"] }
log = "0.4"
reqwest = { version = "0.11", features = ["json"] }
secrecy = "0.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.18", features = ["time"] }
url = "2.2"
strum_macros = "*"
strum = "*"

[dev-dependencies]
tokio = { version = "1.18", features = ["macros"] }
